# discord-selfbot

./: .gitignore  .tern-project  CMakeLists.txt  LICENSE  README.md  binding.gyp  bot.js  command.js  config.json  global.js  login.js  m.sh  mention-strings.json  mjs.sh  package-lock.json  package.json  secrets.default.json  tsconfig.json  util.js
commands/: afk.js  kill.js  prefix.js  repo.js  time.js
native/: currently-playing.cc  shell.cc  util.cc  util.hh
old-js/: bot.js  command.js  global.js  kill.js  prefix.js  repo.js  util.js
playground/: promisetest.ts  time.js  typeof-test.js
src/: bot.js  bot.ts  command.js  command.ts  globals.js  globals.ts  native_module.js  native_module.ts  team.ts  util.js  util.ts
src/commands/: afk.js  config.ts  kill.js  kill.ts  prefix.js  prefix.ts  purge.js  purge.ts  repo.js  repo.ts  tba.ts  time.js  time.ts
src/native/: currently-playing.cc  util.cc  util.hh
